syntax = "proto3";

package worker;

import "proto/common/common.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/10Narratives/distgo-db/pkg/proto/worker";

service Storage {
    rpc CreateDocument(CreateDocumentRequest) returns (CreateDocumentResponse);
    rpc GetDocument(GetDocumentRequest) returns (GetDocumentResponse);
    rpc ListDocuments(ListDocumentsRequest) returns (ListDocumentsResponse);
    rpc UpdateDocument(UpdateDocumentRequest) returns (UpdateDocumentResponse);
    rpc DeleteDocument(DeleteDocumentRequest) returns (DeleteDocumentResponse);
}

message CreateDocumentRequest {
    string collection = 1;          
    google.protobuf.Struct document = 2;
}

message CreateDocumentResponse {
    common.Document created_document = 1;
    common.Status status = 2;
}

message GetDocumentRequest {
    string collection = 1;
    string document_id = 2;
    bool include_metadata = 3;
}

message GetDocumentResponse {
    common.Document document = 1;
    common.Status status = 2;
}

message ListDocumentsRequest {
    string collection = 1;  
}

message ListDocumentsResponse {
    repeated common.Document documents = 1;
    common.Status status = 3;
}

message UpdateDocumentRequest {
    string collection = 1;
    string document_id = 2;
    google.protobuf.Struct update = 3;
    optional int64 if_revision = 4;   
    bool upsert = 5;                  
}

message UpdateDocumentResponse {
    common.Document updated_document = 1;
    common.Status status = 2;
}

message DeleteDocumentRequest {
    string collection = 1;
    string document_id = 2;
    optional int64 if_revision = 3; 
}

message DeleteDocumentResponse {
    common.Status status = 1;
}
